--- a/index.html
+++ b/index.html
@@ -65,17 +65,13 @@
           </div>
         </div>
       </section>
-      <section class="section-how grid grid--2-cols">
-        <div>Test1</div>
-        <div>Test2</div>
-        <div>Test3</div>
-        <div>Test4</div>
-      </section>
-      <section class="section-how grid grid--3-cols">
-        <div>Test1</div>
-        <div>Test2</div>
-        <div>Test3</div>
-        <div>Test4</div>
+      <section class="section-how">
+        <div class="container grid grid--2-cols">
+          <div>Test1</div>
+          <div>Test2</div>
+          <div>Test3</div>
+          <div>Test4</div>
+        </div>
       </section>
     </main>
   </body>
