--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
       href="https://fonts.googleapis.com/css2?family=Rubik:wght@400;500;600;700&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="css/general.css" />
     <link rel="stylesheet" href="css/style.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Omnifood</title>
@@ -77,7 +78,7 @@
           <!-- STEP 01 -->
           <div class="step-text-box">
             <p class="step-number">01</p>
-            <h3 class="heading-tertiart">
+            <h3 class="heading-tertiary7">
               Tell us what you like (and what not)
             </h3>
 
@@ -107,7 +108,7 @@
 
           <div class="step-text-box">
             <p class="step-number">02</p>
-            <h3 class="heading-tertiart">Approve your weekly meal plan</h3>
+            <h3 class="heading-tertiary">Approve your weekly meal plan</h3>
 
             <p class="step-description">
               Once per week, approve the meal plan generated for you by Omnifood
@@ -120,7 +121,7 @@
 
           <div class="step-text-box">
             <p class="step-number">03</p>
-            <h3 class="heading-tertiart">Receive meals at convenient time</h3>
+            <h3 class="heading-tertiary">Receive meals at convenient time</h3>
 
             <p class="step-description">
               Best chefs in town will cook your selected meal every day, and we
