--- a/index.html
+++ b/index.html
@@ -11,6 +11,14 @@
     />
     <link rel="stylesheet" href="css/general.css" />
     <link rel="stylesheet" href="css/style.css" />
+    <script
+      type="module"
+      src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"
+    ></script>
+    <script
+      nomodule
+      src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"
+    ></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Omnifood</title>
   </head>
@@ -177,10 +185,19 @@
             <span class="tag">Vegetarian</span>
             <p class="meal-title">Japanese Gyozas</p>
 
-            <ul class="meal-atrributes">
-              <li class="meal-atrribute">650 calories</li>
-              <li class="meal-atrribute">Nutriscore &reg; 74</li>
-              <li class="meal-atrribute">4.9 rating (537)</li>
+            <ul class="meal-attributes">
+              <li class="meal-attribute">
+                <ion-icon name="flame-outline"></ion-icon>
+                <span>650 calories</span>
+              </li>
+              <li class="meal-attribute">
+                <ion-icon name="restaurant-outline"></ion-icon>
+                <span> Nutriscore &reg; 74</span>
+              </li>
+              <li class="meal-attribute">
+                <ion-icon name="star-outline"></ion-icon>
+                <span>4.9 rating (537)</span>
+              </li>
             </ul>
           </div>
           <div class="meal">Meals</div>
