--- a/index.html
+++ b/index.html
@@ -176,31 +176,71 @@
           </h2>
         </div>
         <div class="container grid grid--3-cols">
+          <!-- MEAL NUMBER ONE -->
           <div class="meal">
             <img
               src="img/meals/meal-1.jpg"
               alt="Japanese Gyozas"
               class="meal-img"
             />
-            <span class="tag">Vegetarian</span>
-            <p class="meal-title">Japanese Gyozas</p>
+            <div class="meal-content">
+              <div class="meal-tags">
+                <span class="tag">Vegetarian</span>
+              </div>
+              <p class="meal-title">Japanese Gyozas</p>
 
-            <ul class="meal-attributes">
-              <li class="meal-attribute">
-                <ion-icon name="flame-outline"></ion-icon>
-                <span>650 calories</span>
-              </li>
-              <li class="meal-attribute">
-                <ion-icon name="restaurant-outline"></ion-icon>
-                <span> Nutriscore &reg; 74</span>
-              </li>
-              <li class="meal-attribute">
-                <ion-icon name="star-outline"></ion-icon>
-                <span>4.9 rating (537)</span>
-              </li>
-            </ul>
+              <ul class="meal-attributes">
+                <li class="meal-attribute">
+                  <ion-icon class="meal-icon" name="flame-outline"></ion-icon>
+                  <span> <strong>650</strong> calories</span>
+                </li>
+                <li class="meal-attribute">
+                  <ion-icon
+                    class="meal-icon"
+                    name="restaurant-outline"
+                  ></ion-icon>
+                  <span> Nutriscore &reg; <strong>74</strong></span>
+                </li>
+                <li class="meal-attribute">
+                  <ion-icon class="meal-icon" name="star-outline"></ion-icon>
+                  <span><strong>4.9</strong> rating (537)</span>
+                </li>
+              </ul>
+            </div>
           </div>
-          <div class="meal">Meals</div>
+
+          <!-- MEAL NUMBER TWO -->
+          <div class="meal">
+            <img
+              src="img/meals/meal-2.jpg"
+              alt="Japanese Gyozas"
+              class="meal-img"
+            />
+            <div class="meal-content">
+              <div class="meal-tags">
+                <span class="tag">Vegetarian</span>
+              </div>
+              <p class="meal-title">Japanese Gyozas</p>
+
+              <ul class="meal-attributes">
+                <li class="meal-attribute">
+                  <ion-icon class="meal-icon" name="flame-outline"></ion-icon>
+                  <span> <strong>650</strong> calories</span>
+                </li>
+                <li class="meal-attribute">
+                  <ion-icon
+                    class="meal-icon"
+                    name="restaurant-outline"
+                  ></ion-icon>
+                  <span> Nutriscore &reg; <strong>74</strong></span>
+                </li>
+                <li class="meal-attribute">
+                  <ion-icon class="meal-icon" name="star-outline"></ion-icon>
+                  <span><strong>4.9</strong> rating (537)</span>
+                </li>
+              </ul>
+            </div>
+          </div>
           <div class="list">List of diets</div>
         </div>
       </section>
