--- a/index.html
+++ b/index.html
@@ -168,14 +168,14 @@
         </div>
       </section>
 
-      <section class="section-meals">
+      <section class="section-meals center-text">
         <div class="container">
           <span class="subheading">Meals</span>
           <h2 class="heading-secondary">
             Omnifood AI chooses from 5,000+ recipes
           </h2>
         </div>
-        <div class="container grid grid--3-cols">
+        <div class="container grid grid--3-cols margin-bottom-md">
           <!-- MEAL NUMBER ONE -->
           <div class="meal">
             <img
@@ -243,44 +243,49 @@
             </div>
           </div>
           <div class="diets">
+            <h3 class="heading-tertiary">Works with any diet</h3>
             <ul class="list">
               <li class="list-item">
-                <ion-icon name="checkmark-outline"></ion-icon>
+                <ion-icon class="list-icon" name="checkmark-outline"></ion-icon>
                 <span>Vegetarian</span>
               </li>
               <li class="list-item">
-                <ion-icon name="checkmark-outline"></ion-icon>
+                <ion-icon class="list-icon" name="checkmark-outline"></ion-icon>
                 <span>Vegan</span>
               </li>
               <li class="list-item">
-                <ion-icon name="checkmark-outline"></ion-icon>
+                <ion-icon class="list-icon" name="checkmark-outline"></ion-icon>
                 <span>Pescatarian</span>
               </li>
               <li class="list-item">
-                <ion-icon name="checkmark-outline"></ion-icon>
+                <ion-icon class="list-icon" name="checkmark-outline"></ion-icon>
                 <span>Gluten-free</span>
               </li>
               <li class="list-item">
-                <ion-icon name="checkmark-outline"></ion-icon>
+                <ion-icon class="list-icon" name="checkmark-outline"></ion-icon>
                 <span>Lactose-free</span>
               </li>
               <li class="list-item">
-                <ion-icon name="checkmark-outline"></ion-icon> <span>Keto</span>
+                <ion-icon class="list-icon" name="checkmark-outline"></ion-icon>
+                <span>Keto</span>
               </li>
               <li class="list-item">
-                <ion-icon name="checkmark-outline"></ion-icon>
+                <ion-icon class="list-icon" name="checkmark-outline"></ion-icon>
                 <span>Paleo</span>
               </li>
               <li class="list-item">
-                <ion-icon name="checkmark-outline"></ion-icon>
+                <ion-icon class="list-icon" name="checkmark-outline"></ion-icon>
                 <span>Low FODMAP</span>
               </li>
               <li class="list-item">
-                <ion-icon name="checkmark-outline"></ion-icon>
+                <ion-icon class="list-icon" name="checkmark-outline"></ion-icon>
                 <span>Kid-friendly</span>
               </li>
             </ul>
           </div>
+        </div>
+        <div class="container all-recipes">
+          <a href="#" class="link">See all recipes &rarr;</a>
         </div>
       </section>
     </main>
