--- a/index.html
+++ b/index.html
@@ -168,8 +168,8 @@
         </div>
       </section>
 
-      <section class="section-meals center-text">
-        <div class="container">
+      <section class="section-meals">
+        <div class="container center-text">
           <span class="subheading">Meals</span>
           <h2 class="heading-secondary">
             Omnifood AI chooses from 5,000+ recipes
@@ -289,66 +289,71 @@
         </div>
       </section>
       <section class="section-testimonials grid grid--2-cols">
-        <div class="testimonials">
-          <!-- FIRST testimonial -->
-          <figure class="testimonial">
-            <img
-              class="testimonial-img"
-              src="img/customers/dave.jpg"
-              alt="Image of Dave Bryson"
-            />
-            <blockquote class="testimonial-text">
-              Inexpensive, healthy and great-tasting meals, without even having
-              to order manually! It feels truly magical.
-              <p class="testimonial-name">&mdash; Dave Bryson</p>
-            </blockquote>
-          </figure>
+        <div class="testimonials-container">
+          <span class="subheading">Meals</span>
+          <h2 class="heading-secondary">Once you try it, you can't go back</h2>
+          <div class="testimonials">
+            <!-- FIRST testimonial -->
+            <figure class="testimonial">
+              <img
+                class="testimonial-img"
+                src="img/customers/dave.jpg"
+                alt="Image of Dave Bryson"
+              />
+              <blockquote class="testimonial-text">
+                Inexpensive, healthy and great-tasting meals, without even
+                having to order manually! It feels truly magical.
+                <p class="testimonial-name">&mdash; Dave Bryson</p>
+              </blockquote>
+            </figure>
 
-          <!-- SECOND testimonial -->
+            <!-- SECOND testimonial -->
 
-          <figure class="testimonial">
-            <img
-              class="testimonial-img"
-              src="img/customers/ben.jpg"
-              alt="Image of Ben Hadley"
-            />
-            <blockquote class="testimonial-text">
-              The AI algorithm is crazy good, it chooses the right meals for me
-              every time. It's amazing not to worry about food anymore!
-              <p class="testimonial-name">&mdash; Ben Hadley</p>
-            </blockquote>
-          </figure>
+            <figure class="testimonial">
+              <img
+                class="testimonial-img"
+                src="img/customers/ben.jpg"
+                alt="Image of Ben Hadley"
+              />
+              <blockquote class="testimonial-text">
+                The AI algorithm is crazy good, it chooses the right meals for
+                me every time. It's amazing not to worry about food anymore!
+                <p class="testimonial-name">&mdash; Ben Hadley</p>
+              </blockquote>
+            </figure>
 
-          <!-- THIRD testimonial -->
+            <!-- THIRD testimonial -->
 
-          <figure class="testimonial">
-            <img
-              class="testimonial-img"
-              src="img/customers/steve.jpg"
-              alt="Image of Steve Miller"
-            />
-            <blockquote class="testimonial-text">
-              Omnifood is a life saver! I just started a company, so there's no
-              time for cooking. I couldn't live without my daily meals now!
-              <p class="testimonial-name">&mdash; Steve Miller</p>
-            </blockquote>
-          </figure>
+            <figure class="testimonial">
+              <img
+                class="testimonial-img"
+                src="img/customers/steve.jpg"
+                alt="Image of Steve Miller"
+              />
+              <blockquote class="testimonial-text">
+                Omnifood is a life saver! I just started a company, so there's
+                no time for cooking. I couldn't live without my daily meals now!
+                <p class="testimonial-name">&mdash; Steve Miller</p>
+              </blockquote>
+            </figure>
 
-          <!-- FOURTH testimonial -->
+            <!-- FOURTH testimonial -->
 
-          <figure class="testimonial">
-            <img
-              class="testimonial-img"
-              src="img/customers/hannah.jpg"
-              alt="Image of Hannah Smith"
-            />
-            <blockquote class="testimonial-text">
-              I got Omnifood for the whole family, and it frees up so much time!
-              Plus, everything is organic and vegan and without plastic.
-              <p class="testimonial-name">&mdash; Hannah Smith</p>
-            </blockquote>
-          </figure>
+            <figure class="testimonial">
+              <img
+                class="testimonial-img"
+                src="img/customers/hannah.jpg"
+                alt="Image of Hannah Smith"
+              />
+              <blockquote class="testimonial-text">
+                I got Omnifood for the whole family, and it frees up so much
+                time! Plus, everything is organic and vegan and without plastic.
+                <p class="testimonial-name">&mdash; Hannah Smith</p>
+              </blockquote>
+            </figure>
+          </div>
         </div>
+
         <div class="gallery">gallery</div>
       </section>
     </main>
