--- a/index.html
+++ b/index.html
@@ -437,7 +437,7 @@
             Eating well without breaking the bank
           </h2>
         </div>
-        <div class="container grid grid--2-cols">
+        <div class="container grid grid--2-cols margin-bottom-md">
 
           <!-- PRICING PLAN 1 -->
           <div class="pricing-plan pricing-plan--starter">
