--- a/index.html
+++ b/index.html
@@ -505,9 +505,8 @@
           </div>
         </div>
 
-<div class="container"><aside class="plan-details">Prices include all applicable taxes. You can cancel at any time. Both plans include the following:
-</aside></div>
-
+        <div class="container"><aside class="plan-details">Prices include all applicable taxes. You can cancel at any time. Both plans include the following:
+              </aside></div>
 
         <div class="container grid grid--4-cols">
           <div class="feature">
@@ -525,6 +524,13 @@
             <ion-icon class="feature-icon" name="pause-outline"></ion-icon>
             <p class="feature-title">Pause anytime</p>
             <p class="feauture-text">Going on vacation? Just pause your subscription, and we refund unused days.</p></div>
+        </div>
+      </section>
+
+      <section class="section-cta">
+        <div class="container cta">
+          <div class="cta-text-box">CTA</div>
+          <div class="cta-img-box">IMG</div>
         </div>
       </section>
     </main>
