--- a/index.html
+++ b/index.html
@@ -563,7 +563,7 @@
         </select>
       </div>
         <div>
-          <button class="btn">Sign up now</button>      
+          <button class="btn btn--form">Sign up now</button>      
         </div>
         </form>
       </div>
