--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
   </head>
   <body>
     <header class="header">
-      <img src="img/omnifood-logo.png" alt="Omnnifood logo" class="logo" />
+      <a href="#">  <img src="img/omnifood-logo.png" alt="Omnnifood logo" class="logo" /></a>
+    
       <nav class="main-nav">
         <ul class="main-nav-list">
           <li><a class="main-nav-link" href="#">Section 1</a></li>
@@ -563,7 +564,7 @@
         </select>
       </div>
         <div>
-          <button class="btn btn--form">Sign up now</button>      
+          <button class="btn btn--form  ">Sign up now</button>      
         </div>
         </form>
       </div>
@@ -572,5 +573,57 @@
         </div>
       </section>
     </main>
+
+    <footer class="footer">
+      <div class="container grid grid--5-cols">
+        <div class="logo-col">      
+          <a href="#" class="footer-logo"> 
+             <img src="img/omnifood-logo.png" alt="Omnnifood logo" class="logo" /></a>
+             <p class="copyright">Copyright &copy; 2027 by Omnifood, Inc. All rights reserved.</p>
+        </div>
+        <div class="adress-col">
+          <p class="footer-heading">Contact use</p>
+          <address>
+            <p>623 Harrison St., 2nd Floor, San Francisco, CA 94107</p>
+            <p> <a href="tel:415-201-6370">415-201-6370</a></p> 
+            <p> <a href="mailto:hello@omnifood.com">hello@omnifood.com</a></p>
+  </address>
+        </div>
+
+        <!-- FIRST NAV -->
+        <nav class="nav-col">
+          <p class="footer-heading">Account</p>
+          <ul class="footer-nav">
+            <li><a href="#">Create account</a></li>
+            <li><a href="#">Sign in</a></li>
+            <li><a href="#">IOS app</a></li>
+            <li><a href="#">Android app</a></li>
+          </ul>
+        </nav>
+
+        
+<!-- SECOND NAV -->
+<nav class="nav-col">
+  <p class="footer-heading">Company</p>
+  <ul class="footer-nav">
+    <li><a href="#">About Omnifood</a></li>
+    <li><a href="#">For business</a></li>
+    <li><a href="#">Cooking partners</a></li>
+    <li><a href="#">Careers</a></li>
+  </ul>
+</nav>
+
+<!-- THIRD NAV -->
+<nav class="nav-col">
+  <p class="footer-heading">Resources</p>
+  <ul class="footer-nav">
+    <li><a href="#">Recipe directory</a></li>
+    <li><a href="#">Help center</a></li>
+    <li><a href="#">Privacy & terms</a></li>
+  </ul>
+</nav>
+      </div>
+    </footer>
   </body>
 </html>
+
