--- a/index.html
+++ b/index.html
@@ -579,6 +579,12 @@
         <div class="logo-col">      
           <a href="#" class="footer-logo"> 
              <img src="img/omnifood-logo.png" alt="Omnnifood logo" class="logo" /></a>
+
+             <ul class="social-links">
+              <li><a href="#"><ion-icon name="logo-instagram"></ion-icon></a></li>
+              <li><a href="#"><ion-icon name="logo-facebook"></ion-icon></a></li>
+              <li><a href="#"><ion-icon name="logo-twitter"></ion-icon></a></li>
+             </ul>
              <p class="copyright">Copyright &copy; 2027 by Omnifood, Inc. All rights reserved.</p>
         </div>
         <div class="adress-col">
