--- a/index.html
+++ b/index.html
@@ -575,24 +575,24 @@
     </main>
 
     <footer class="footer">
-      <div class="container grid grid--5-cols">
+      <div class="container grid grid--footer">
         <div class="logo-col">      
           <a href="#" class="footer-logo"> 
              <img src="img/omnifood-logo.png" alt="Omnnifood logo" class="logo" /></a>
-
+ 
              <ul class="social-links">
-              <li><a href="#"><ion-icon name="logo-instagram"></ion-icon></a></li>
-              <li><a href="#"><ion-icon name="logo-facebook"></ion-icon></a></li>
-              <li><a href="#"><ion-icon name="logo-twitter"></ion-icon></a></li>
+              <li><a class="footer-link"  href="#"><ion-icon class="social-icon" name="logo-instagram"></ion-icon></a></li>
+              <li><a class="footer-link"  href="#"><ion-icon class="social-icon" name="logo-facebook"></ion-icon></a></li>
+              <li><a class="footer-link"  href="#"><ion-icon class="social-icon" name="logo-twitter"></ion-icon></a></li>
              </ul>
              <p class="copyright">Copyright &copy; 2027 by Omnifood, Inc. All rights reserved.</p>
         </div>
         <div class="adress-col">
-          <p class="footer-heading">Contact use</p>
-          <address>
-            <p>623 Harrison St., 2nd Floor, San Francisco, CA 94107</p>
-            <p> <a href="tel:415-201-6370">415-201-6370</a></p> 
-            <p> <a href="mailto:hello@omnifood.com">hello@omnifood.com</a></p>
+          <p class="footer-heading">Contact us</p>
+          <address class="contacts">
+            <p class="address">623 Harrison St., 2nd Floor, San Francisco, CA 94107</p>
+            <p> <a class="footer-link" href="tel:415-201-6370">415-201-6370</a></p> 
+            <p> <a class="footer-link" href="mailto:hello@omnifood.com">hello@omnifood.com</a></p>
   </address>
         </div>
 
@@ -600,11 +600,11 @@
         <nav class="nav-col">
           <p class="footer-heading">Account</p>
           <ul class="footer-nav">
-            <li><a href="#">Create account</a></li>
-            <li><a href="#">Sign in</a></li>
-            <li><a href="#">IOS app</a></li>
-            <li><a href="#">Android app</a></li>
-          </ul>
+            <li><a class="footer-link" href="#">Create account</a></li>
+            <li><a class="footer-link" href="#">Sign in</a></li>
+            <li><a class="footer-link" href="#">IOS app</a></li>
+            <li><a class="footer-link" href="#">Android app</a></li>
+          </ul> 
         </nav>
 
         
@@ -612,10 +612,10 @@
 <nav class="nav-col">
   <p class="footer-heading">Company</p>
   <ul class="footer-nav">
-    <li><a href="#">About Omnifood</a></li>
-    <li><a href="#">For business</a></li>
-    <li><a href="#">Cooking partners</a></li>
-    <li><a href="#">Careers</a></li>
+    <li><a class="footer-link" href="#">About Omnifood</a></li>
+    <li><a class="footer-link" href="#">For business</a></li>
+    <li><a class="footer-link" href="#">Cooking partners</a></li>
+    <li><a class="footer-link" href="#">Careers</a></li>
   </ul>
 </nav>
 
@@ -623,9 +623,9 @@
 <nav class="nav-col">
   <p class="footer-heading">Resources</p>
   <ul class="footer-nav">
-    <li><a href="#">Recipe directory</a></li>
-    <li><a href="#">Help center</a></li>
-    <li><a href="#">Privacy & terms</a></li>
+    <li><a class="footer-link" href="#">Recipe directory</a></li>
+    <li><a class="footer-link" href="#">Help center</a></li>
+    <li><a class="footer-link" href="#">Privacy & terms</a></li>
   </ul>
 </nav>
       </div>
