--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     />
     <link rel="stylesheet" href="css/general.css" />
     <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/queries.css" />
+
     <script
       type="module"
       src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"
@@ -579,7 +581,6 @@
         <div class="logo-col">      
           <a href="#" class="footer-logo"> 
              <img src="img/omnifood-logo.png" alt="Omnnifood logo" class="logo" /></a>
- 
              <ul class="social-links">
               <li><a class="footer-link"  href="#"><ion-icon class="social-icon" name="logo-instagram"></ion-icon></a></li>
               <li><a class="footer-link"  href="#"><ion-icon class="social-icon" name="logo-facebook"></ion-icon></a></li>
