--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
       src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"
     ></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <script defer src="script.js"></script>
     <title>Omnifood</title>
   </head>
   <body>
