automate website's copyright year

--- a/index.html
+++ b/index.html
@@ -591,7 +591,7 @@
               <li><a class="footer-link"  href="#"><ion-icon class="social-icon" name="logo-facebook"></ion-icon></a></li>
               <li><a class="footer-link"  href="#"><ion-icon class="social-icon" name="logo-twitter"></ion-icon></a></li>
              </ul>
-             <p class="copyright">Copyright &copy; 2027 by Omnifood, Inc. All rights reserved.</p>
+             <p class="copyright">Copyright &copy; <span class="year">2027 </span> by Omnifood, Inc. All rights reserved.</p>
         </div>
         <div class="adress-col">
           <p class="footer-heading">Contact us</p>
